// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Level component Should concat classname in props with Bulma classname 1`] = `
<div
  className="level other-class this-is-a-test"
  style={Object {}}
>
  <p>
    Default
  </p>
</div>
`;

exports[`Level component Should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "Item": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "backgroundColor": undefined,
      "children": null,
      "className": "",
      "clearfix": undefined,
      "clipped": undefined,
      "hidden": undefined,
      "invisible": undefined,
      "italic": undefined,
      "marginless": undefined,
      "overlay": undefined,
      "paddingless": undefined,
      "pull": undefined,
      "radiusless": undefined,
      "renderAs": "div",
      "responsive": undefined,
      "shadowless": undefined,
      "style": Object {},
      "textAlignment": undefined,
      "textColor": undefined,
      "textSize": undefined,
      "textTransform": undefined,
      "textWeight": undefined,
      "unselectable": undefined,
    },
    "propTypes": Object {
      "backgroundColor": [Function],
      "children": [Function],
      "className": [Function],
      "clearfix": [Function],
      "clipped": [Function],
      "hidden": [Function],
      "invisible": [Function],
      "italic": [Function],
      "marginless": [Function],
      "overlay": [Function],
      "paddingless": [Function],
      "pull": [Function],
      "radiusless": [Function],
      "renderAs": [Function],
      "responsive": [Function],
      "shadowless": [Function],
      "style": [Function],
      "textAlignment": [Function],
      "textColor": [Function],
      "textSize": [Function],
      "textTransform": [Function],
      "textWeight": [Function],
      "unselectable": [Function],
    },
    "render": [Function],
  },
  "Side": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "align": "left",
      "backgroundColor": undefined,
      "children": null,
      "className": "",
      "clearfix": undefined,
      "clipped": undefined,
      "hidden": undefined,
      "invisible": undefined,
      "italic": undefined,
      "marginless": undefined,
      "overlay": undefined,
      "paddingless": undefined,
      "pull": undefined,
      "radiusless": undefined,
      "renderAs": "div",
      "responsive": undefined,
      "shadowless": undefined,
      "style": Object {},
      "textAlignment": undefined,
      "textColor": undefined,
      "textSize": undefined,
      "textTransform": undefined,
      "textWeight": undefined,
      "unselectable": undefined,
    },
    "propTypes": Object {
      "align": [Function],
      "backgroundColor": [Function],
      "children": [Function],
      "className": [Function],
      "clearfix": [Function],
      "clipped": [Function],
      "hidden": [Function],
      "invisible": [Function],
      "italic": [Function],
      "marginless": [Function],
      "overlay": [Function],
      "paddingless": [Function],
      "pull": [Function],
      "radiusless": [Function],
      "renderAs": [Function],
      "responsive": [Function],
      "shadowless": [Function],
      "style": [Function],
      "textAlignment": [Function],
      "textColor": [Function],
      "textSize": [Function],
      "textTransform": [Function],
      "textWeight": [Function],
      "unselectable": [Function],
    },
    "render": [Function],
  },
  "defaultProps": Object {
    "backgroundColor": undefined,
    "breakpoint": null,
    "children": null,
    "className": "",
    "clearfix": undefined,
    "clipped": undefined,
    "hidden": undefined,
    "invisible": undefined,
    "italic": undefined,
    "marginless": undefined,
    "overlay": undefined,
    "paddingless": undefined,
    "pull": undefined,
    "radiusless": undefined,
    "renderAs": "div",
    "responsive": undefined,
    "shadowless": undefined,
    "style": Object {},
    "textAlignment": undefined,
    "textColor": undefined,
    "textSize": undefined,
    "textTransform": undefined,
    "textWeight": undefined,
    "unselectable": undefined,
  },
  "propTypes": Object {
    "backgroundColor": [Function],
    "breakpoint": [Function],
    "children": [Function],
    "className": [Function],
    "clearfix": [Function],
    "clipped": [Function],
    "hidden": [Function],
    "invisible": [Function],
    "italic": [Function],
    "marginless": [Function],
    "overlay": [Function],
    "paddingless": [Function],
    "pull": [Function],
    "radiusless": [Function],
    "renderAs": [Function],
    "responsive": [Function],
    "shadowless": [Function],
    "style": [Function],
    "textAlignment": [Function],
    "textColor": [Function],
    "textSize": [Function],
    "textTransform": [Function],
    "textWeight": [Function],
    "unselectable": [Function],
  },
  "render": [Function],
}
`;

exports[`Level component Should expose Level Side and Item 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "align": "left",
    "backgroundColor": undefined,
    "children": null,
    "className": "",
    "clearfix": undefined,
    "clipped": undefined,
    "hidden": undefined,
    "invisible": undefined,
    "italic": undefined,
    "marginless": undefined,
    "overlay": undefined,
    "paddingless": undefined,
    "pull": undefined,
    "radiusless": undefined,
    "renderAs": "div",
    "responsive": undefined,
    "shadowless": undefined,
    "style": Object {},
    "textAlignment": undefined,
    "textColor": undefined,
    "textSize": undefined,
    "textTransform": undefined,
    "textWeight": undefined,
    "unselectable": undefined,
  },
  "propTypes": Object {
    "align": [Function],
    "backgroundColor": [Function],
    "children": [Function],
    "className": [Function],
    "clearfix": [Function],
    "clipped": [Function],
    "hidden": [Function],
    "invisible": [Function],
    "italic": [Function],
    "marginless": [Function],
    "overlay": [Function],
    "paddingless": [Function],
    "pull": [Function],
    "radiusless": [Function],
    "renderAs": [Function],
    "responsive": [Function],
    "shadowless": [Function],
    "style": [Function],
    "textAlignment": [Function],
    "textColor": [Function],
    "textSize": [Function],
    "textTransform": [Function],
    "textWeight": [Function],
    "unselectable": [Function],
  },
  "render": [Function],
}
`;

exports[`Level component Should expose Level Side and Item 2`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "backgroundColor": undefined,
    "children": null,
    "className": "",
    "clearfix": undefined,
    "clipped": undefined,
    "hidden": undefined,
    "invisible": undefined,
    "italic": undefined,
    "marginless": undefined,
    "overlay": undefined,
    "paddingless": undefined,
    "pull": undefined,
    "radiusless": undefined,
    "renderAs": "div",
    "responsive": undefined,
    "shadowless": undefined,
    "style": Object {},
    "textAlignment": undefined,
    "textColor": undefined,
    "textSize": undefined,
    "textTransform": undefined,
    "textWeight": undefined,
    "unselectable": undefined,
  },
  "propTypes": Object {
    "backgroundColor": [Function],
    "children": [Function],
    "className": [Function],
    "clearfix": [Function],
    "clipped": [Function],
    "hidden": [Function],
    "invisible": [Function],
    "italic": [Function],
    "marginless": [Function],
    "overlay": [Function],
    "paddingless": [Function],
    "pull": [Function],
    "radiusless": [Function],
    "renderAs": [Function],
    "responsive": [Function],
    "shadowless": [Function],
    "style": [Function],
    "textAlignment": [Function],
    "textColor": [Function],
    "textSize": [Function],
    "textTransform": [Function],
    "textWeight": [Function],
    "unselectable": [Function],
  },
  "render": [Function],
}
`;

exports[`Level component Should have level classname 1`] = `
<div
  className="level"
  style={Object {}}
>
  <div
    className="level-item"
    style={Object {}}
  >
    Item 1
  </div>
  <div
    className="level-item"
    style={Object {}}
  >
    Item 2
  </div>
  <div
    className="level-item"
    style={Object {}}
  >
    Item 3
  </div>
</div>
`;

exports[`Level component Should render Levels with right and left side 1`] = `
<div
  className="level"
  style={Object {}}
>
  <div
    className="level-left"
    style={Object {}}
  >
    <div
      className="level-item"
      style={Object {}}
    >
      Item 1
    </div>
    <div
      className="level-item"
      style={Object {}}
    >
      Item 2
    </div>
  </div>
  <div
    className="level-right"
    style={Object {}}
  >
    <div
      className="level-item"
      style={Object {}}
    >
      Item 3
    </div>
  </div>
</div>
`;

exports[`Level component Should use inline styles 1`] = `
<div
  className="level"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</div>
`;
